--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ url: "http://marsluo.github.com/"
 username: MarsLuo
 
 # Build settings
-markdown: kramdown
 permalink: pretty
 paginate: 10
+
+markdown: KramdownPygments
+kramdown:
+  default_lang: objectivec
